[project]
name = "ai-news-reporter"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.2.0",
]

[tool.vercel]
entrypoint = "app.main:app"
